# proxcp

./: .gitignore  README.md  docker-compose.yml
misc/: Dockerfile  docker-compose.yml  main.py  pyproject.toml
misc/prompt/: prompt.py
misc/resources/: resource.py  rules.txt
proxcp-client/: .dockerignore  Dockerfile  package-lock.json  package.json
proxcp-client/app/: globals.css  layout.tsx  page.tsx
proxcp-client/app/apikeys/: page.tsx
proxcp-client/app/inspector/: page.tsx
proxcp-client/app/servers/: page.tsx
proxcp-client/app/tools/: page.tsx
proxcp-client/components/: LoginPage.tsx
proxcp-client/components/layout/: DashboardLayout.tsx  Sidebar.tsx
proxcp-client/lib/: api.ts  auth-client.ts  auth.ts
proxcp-client/scripts/: init-db.js
proxcp-server/: .dockerignore  Dockerfile  example.env  pyproject.toml
proxcp-server/app/: main.py
proxcp-server/app/routers/api_key/: route.py
proxcp-server/app/routers/mcp/: route.py
proxcp-server/app/routers/sync/: route.py
proxcp-server/app/routers/tool/: route.py
proxcp-server/app/routers/transaction/: route.py
proxcp-server/app/utils/: cache.py  connections.py  database.py  network.py  protocol.py  toon.py  track.py
