[project]
name = "proxcp_server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.0",
    "asyncpg>=0.30.0",
    "dotenv>=0.9.9",
    "fastapi>=0.118.3",
    "fastmcp>=2.12.4",
    "jose>=1.0.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.0",
    "pyjwt>=2.10.1",
    "python-jose>=3.5.0",
    "sqlalchemy>=2.0.44",
    "sse-starlette>=3.0.2",
    "uvicorn>=0.37.0",
]
